// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainPageContainer> snapshots renders correctly for issue 1`] = `
<div>
  (
  ), (
  <div>
    <header>
      <h1>
        <img
          alt="Logo"
          src="/test-logo-url"
        />
        Eye Of The Storm
      </h1>
      <q>
        A Clearer View Of TABC
      </q>
      <h2>
        Aperiam nulla
      </h2>
    </header>
    <div
      id="mainContent"
    >
      <div
        id="slideShow"
      >
        <a
          href="/"
          onAnimationIteration={[Function]}
          onClick={[Function]}
        >
          <img
            alt="Default, logo"
            className="slideshowPic activePic"
            src="/test-logo-url"
          />
        </a>
      </div>
    </div>
    <span
      id="issueRange"
    >
      <a
        href="/issue/1"
        onClick={[Function]}
      >
        1
      </a>
      <a
        href="/issue/2"
        onClick={[Function]}
      >
        2
      </a>
      <a
        href="/issue/3"
        onClick={[Function]}
      >
        3
      </a>
      <a
        href="/issue/4"
        onClick={[Function]}
      >
        4
      </a>
      <a
        href="/issue/5"
        onClick={[Function]}
      >
        5
      </a>
      ...
      <a
        href="/issue/27"
        onClick={[Function]}
      >
        27
      </a>
      <a
        href="/issue/28"
        onClick={[Function]}
      >
        28
      </a>
      <a
        href="/issue/29"
        onClick={[Function]}
      >
        29
      </a>
      <a
        href="/issue/30"
        onClick={[Function]}
      >
        30
      </a>
      <a
        href="/issue/31"
        onClick={[Function]}
      >
        31
      </a>
      <a
        href="/issue/32"
        onClick={[Function]}
      >
        32
      </a>
      ...
      <a
        href="/issue/89"
        onClick={[Function]}
      >
        89
      </a>
      <a
        href="/issue/90"
        onClick={[Function]}
      >
        90
      </a>
      <a
        href="/issue/91"
        onClick={[Function]}
      >
        91
      </a>
    </span>
    <footer
      className="small"
      id="credits"
    >
      Created by 
      <a
        href="https://davidm.me"
      >
        David Meiseles
      </a>
    </footer>
  </div>
</div>
`;

exports[`<MainPageContainer> snapshots renders correctly for tags 1`] = `
<div>
  (
  ), (
  <div>
    <header>
      <h1>
        <img
          alt="Logo"
          src="/test-logo-url"
        />
        Eye Of The Storm
      </h1>
      <q>
        A Clearer View Of TABC
      </q>
      <h2>
        Tag
      </h2>
    </header>
    <div
      id="mainContent"
    >
      <div
        id="slideShow"
      >
        <a
          href="/"
          onAnimationIteration={[Function]}
          onClick={[Function]}
        >
          <img
            alt="Default, logo"
            className="slideshowPic activePic"
            src="/test-logo-url"
          />
        </a>
      </div>
    </div>
    <span
      id="issueRange"
    >
      <a
        href="/issue/1"
        onClick={[Function]}
      >
        1
      </a>
      <a
        href="/issue/2"
        onClick={[Function]}
      >
        2
      </a>
      <a
        href="/issue/3"
        onClick={[Function]}
      >
        3
      </a>
      <a
        href="/issue/4"
        onClick={[Function]}
      >
        4
      </a>
      <a
        href="/issue/5"
        onClick={[Function]}
      >
        5
      </a>
      ...
      <a
        href="/issue/27"
        onClick={[Function]}
      >
        27
      </a>
      <a
        href="/issue/28"
        onClick={[Function]}
      >
        28
      </a>
      <a
        href="/issue/29"
        onClick={[Function]}
      >
        29
      </a>
      <a
        href="/issue/30"
        onClick={[Function]}
      >
        30
      </a>
      <a
        href="/issue/31"
        onClick={[Function]}
      >
        31
      </a>
      <a
        href="/issue/32"
        onClick={[Function]}
      >
        32
      </a>
      ...
      <a
        href="/issue/89"
        onClick={[Function]}
      >
        89
      </a>
      <a
        href="/issue/90"
        onClick={[Function]}
      >
        90
      </a>
      <a
        href="/issue/91"
        onClick={[Function]}
      >
        91
      </a>
    </span>
    <footer
      className="small"
      id="credits"
    >
      Created by 
      <a
        href="https://davidm.me"
      >
        David Meiseles
      </a>
    </footer>
  </div>
</div>
`;
